# huskybot

./: README.md  huskybot.cabal  repl
src/: Domain.hs  Main.hs
