Name:                huskybot
Version:             0.1
Synopsis:            Codecamp reference bot
License:             BSD3
License-file:        LICENSE
Author:              Juha Paananen
Maintainer:          juha.paananen@gmail.com
Category:            Game
Build-type:          Simple
Cabal-version:       >=1.2


Executable huskybot
   Main-is: Main.hs
   hs-source-dirs: src
   Build-depends:
      base >= 4 && < 5,
      network == 2.3.0.8,
      aeson == 0.6.0.2,
      bytestring

